# halter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SOUL.md  code-review-test.txt
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
crates/halter/: Cargo.toml  README.md
crates/halter-cli/: Cargo.toml  README.md
crates/halter-cli/src/: cli_app.rs  lib.rs  main.rs  openai_oauth.rs  openai_oauth_core.rs  run_output.rs
crates/halter-config/: Cargo.toml  README.md
crates/halter-config/src/: github.rs  lib.rs  loader.rs  resources.rs  schema.rs
crates/halter-config/tests/fixtures/: halter.toml
crates/halter-hooks/: Cargo.toml  README.md
crates/halter-hooks/src/: config.rs  engine.rs  lib.rs  matcher.rs  merge.rs  sdk.rs
crates/halter-protocol/: Cargo.toml  README.md
crates/halter-protocol/src/: fold.rs  lib.rs
crates/halter-providers/: Cargo.toml  README.md
crates/halter-providers/src/: anthropic.rs  anthropic_codec.rs  codec_common.rs  fake.rs  fusion.rs  header_overrides.rs  http_client.rs  lib.rs  model_judge.rs  openai.rs  openai_codec.rs  openai_error.rs  openai_rate_limit.rs  openai_rate_limit_policy.rs  openrouter.rs  registry.rs  resilience.rs  responses_provider.rs  responses_transport.rs  retry.rs  secret.rs  test_http.rs  unsupported.rs
crates/halter-providers/src/openai_codec/: compact.rs  mod.rs  stream.rs
crates/halter-runtime/: Cargo.toml  README.md
crates/halter-runtime/prompts/: agent-core.md  coding-agent-intro.md  default-compaction.md  default-system.md  system-prompt-intro.md
crates/halter-runtime/src/: compaction.rs  context.rs  event_bus.rs  hooks_runtime.rs  lib.rs  model_judge.rs  model_selection.rs  prompt.rs  session.rs  subagent_session.rs  subagents.rs  trace_export.rs  trace_format.rs  trace_recorder.rs  turn_registry.rs
crates/halter-runtime/tests/: protocol_conformance.rs
crates/halter-session/: Cargo.toml  README.md
crates/halter-session/src/: lib.rs  memory.rs  sqlite.rs
crates/halter-session/tests/: store_conformance.rs
crates/halter-tools/: Cargo.toml  README.md
crates/halter-tools/src/: builtin.rs  lib.rs  policy.rs  runtime.rs  session_store.rs  subagent.rs
crates/halter-tools/src/builtin/: common.rs  edit.rs  fs_lock.rs  glob.rs  image.rs  mod.rs  process.rs  profiling.rs  pty.rs  read.rs  task.rs  text.rs  write.rs
crates/halter-tools/src/builtin/ast/: find.rs  language.rs  mod.rs  replace.rs
crates/halter-tools/src/builtin/browser/: browserbase.rs  description.txt  mod.rs  provider.rs  session.rs
crates/halter-tools/src/builtin/grep/: advanced.rs  basic.rs  mod.rs  types.rs
crates/halter-tools/src/builtin/shell/: mod.rs  session.rs  streaming.rs
crates/halter-tools/src/policy/: canonical.rs  errors.rs  security_tests.rs
crates/halter/src/: builder.rs  lib.rs  resources.rs
docs/: halter-plan-comprehensive.md  halter-plan.md
docs/plans/: expand-native-tools.md
examples/: halter.example.toml
examples/software-factory/: Cargo.toml  README.md
examples/software-factory/src/: agent.rs  checkpoint.rs  cli.rs  config.rs  core.rs  git.rs  github.rs  harness.rs  logging.rs  main.rs  prompts.rs  stages.rs  test_support.rs  worktree.rs
halter-agent-plugins/.agents/plugins/: marketplace.json
halter-agent-plugins/.claude-plugin/: marketplace.json
halter-agent-plugins/plugins/halter-rust/.claude-plugin/: plugin.json
halter-agent-plugins/plugins/halter-rust/.codex-plugin/: plugin.json
halter-agent-plugins/plugins/halter-rust/skills/basic-rust/: SKILL.md
halter-agent-plugins/plugins/halter-rust/skills/workflows-rust/: SKILL.md
scripts/: parse_logs.py
