[workspace]
members = [
    "crates/halter-protocol",
    "crates/halter-config",
    "crates/halter-runtime",
    "crates/halter-providers",
    "crates/halter-tools",
    "crates/halter-session",
    "crates/halter",
    "crates/halter-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["pbdeuchler"]
repository = "https://github.com/pbdeuchler/halter"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.100"
arc-swap = "1.7.1"
async-openai = { version = "0.34.0", default-features = false, features = ["byot", "chat-completion", "responses", "rustls"] }
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["derive"] }
glob = "0.3.3"
globset = "0.4.16"
futures = "0.3.31"
ignore = "0.4.24"
indexmap = { version = "2.11.4", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "0.8.22", features = ["chrono", "indexmap2", "uuid1"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.18"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
