[workspace]
members = [
    "crates/halter-protocol",
    "crates/halter-config",
    "crates/halter-hooks",
    "crates/halter-runtime",
    "crates/halter-providers",
    "crates/halter-tools",
    "crates/halter-session",
    "crates/halter",
    "crates/halter-cli",
]
resolver = "3"

[patch.crates-io]
brush-core = { path = "vendor/brush-core-vendored" }

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["pbdeuchler"]
description = "Local-first agent runtime, protocol, and tool harness"
repository = "https://github.com/pbdeuchler/halter"
readme = "README.md"
keywords = ["ai", "agent", "tools"]
categories = ["development-tools"]
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.100"
arc-swap = "1.7.1"
ast-grep-core = { version = "0.42.1", default-features = false, features = ["tree-sitter"] }
ast-grep-language = { version = "0.42.1", default-features = false, features = ["builtin-parser"] }
async-openai = { version = "0.34.0", default-features = false, features = ["byot", "chat-completion", "responses", "rustls"] }
async-trait = "0.1.89"
base64 = "0.22.1"
brush-builtins = { version = "0.1.0", path = "vendor/brush-builtins-vendored" }
brush-core = { version = "0.4.0", path = "vendor/brush-core-vendored" }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["derive"] }
dashmap = "6.1.0"
glob = "0.3.3"
globset = "0.4.16"
grep-matcher = "0.1.7"
grep-regex = "0.1.13"
grep-searcher = "0.1.14"
futures = "0.3.31"
eventsource-stream = "0.2.3"
ignore = "0.4.24"
image = { version = "0.24.9", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
inferno = { version = "0.12.3", default-features = false }
indexmap = { version = "2.11.4", features = ["serde"] }
libc = "0.2.177"
memmap2 = "0.9.9"
os_pipe = "1.2.3"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
portable-pty = "0.9.0"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
schemars = { version = "0.8.22", features = ["chrono", "indexmap2", "uuid1"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
smallvec = { version = "1.15.1", features = ["const_new"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.18"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
