[package]
name = "halter-cli"
version = "0.1.0"

[[bin]]
name = "halter"
path = "src/main.rs"

[[bin]]
name = "halter-cli"
path = "src/main.rs"

[features]
advanced-tools = ["halter/advanced-tools"]
ast-tools = ["halter/ast-tools"]
browser-tools = ["halter/browser-tools"]
image-tools = ["halter/image-tools"]
pty = ["halter/pty"]
profiling = ["halter/profiling"]
full = ["halter/full"]
sqlite = ["halter/sqlite", "halter-config/sqlite"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
halter = { path = "../halter" }
halter-config = { path = "../halter-config" }
halter-protocol = { path = "../halter-protocol" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
