[package]
name = "halter-config"
version = "0.1.0"

[features]
sqlite = []

[dependencies]
anyhow.workspace = true
halter-protocol = { path = "../halter-protocol", version = "0.1.0"  }
indexmap.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
