[package]
name = "halter-hooks"
version = "0.1.0"
edition.workspace = true
license-file = "../../LICENSE"
authors = ["Philip Deuchler (pbdeuchler@gmail.com)"]
description = "Hooks crate for halter"
repository = "https://github.com/pbdeuchler/halter"
homepage = "https://github.com/pbdeuchler/halter"
readme = "README.md"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
globset.workspace = true
halter-protocol = { path = "../halter-protocol", version = "0.1.0"  }
indexmap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
