[package]
name = "halter-protocol"
version = "0.1.1"
edition.workspace = true
license-file = "../../LICENSE"
authors = ["Philip Deuchler (pbdeuchler@gmail.com)"]
description = "Protocol crate for halter"
repository = "https://github.com/pbdeuchler/halter"
homepage = "https://github.com/pbdeuchler/halter"
readme = "README.md"
rust-version.workspace = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
indexmap.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
