[package]
name = "halter-providers"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
halter-protocol = { path = "../halter-protocol", version = "0.1.0"  }
hex.workspace = true
indexmap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
