[package]
name = "halter-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
advanced-tools = ["halter-tools/advanced-tools"]
ast-tools = ["halter-tools/ast-tools"]
image-tools = ["halter-tools/image-tools"]
pty = ["halter-tools/pty"]
profiling = ["halter-tools/profiling"]
full = ["advanced-tools", "ast-tools", "image-tools", "pty", "profiling"]

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
halter-hooks = { path = "../halter-hooks" }
halter-protocol = { path = "../halter-protocol" }
halter-providers = { path = "../halter-providers" }
halter-session = { path = "../halter-session" }
halter-tools = { path = "../halter-tools" }
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
