[package]
name = "halter-runtime"
version = "0.2.0"
edition.workspace = true
license-file = "../../LICENSE"
authors = ["Philip Deuchler (pbdeuchler@gmail.com)"]
description = "Runtime crate for halter"
repository = "https://github.com/pbdeuchler/halter"
homepage = "https://github.com/pbdeuchler/halter"
readme = "README.md"
rust-version.workspace = true

[features]
advanced-tools = ["halter-tools/advanced-tools"]
ast-tools = ["halter-tools/ast-tools"]
browser-tools = ["halter-tools/browser-tools"]
image-tools = ["halter-tools/image-tools"]
pty = ["halter-tools/pty"]
profiling = ["halter-tools/profiling"]
full = ["advanced-tools", "ast-tools", "browser-tools", "image-tools", "pty", "profiling"]

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
halter-hooks = { path = "../halter-hooks", version = "0.2.0" }
halter-protocol = { path = "../halter-protocol", version = "0.2.0" }
halter-providers = { path = "../halter-providers", version = "0.2.0" }
halter-session = { path = "../halter-session", version = "0.2.0" }
halter-tools = { path = "../halter-tools", version = "0.2.0" }
lru.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
