[package]
name = "halter-session"
version = "0.1.0"

[features]
sqlite = ["dep:rusqlite"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
halter-protocol = { path = "../halter-protocol" }
rusqlite = { workspace = true, optional = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
