[package]
name = "halter-session"
version = "0.1.1"
edition.workspace = true
license-file = "../../LICENSE"
authors = ["Philip Deuchler (pbdeuchler@gmail.com)"]
description = "Session crate for halter"
repository = "https://github.com/pbdeuchler/halter"
homepage = "https://github.com/pbdeuchler/halter"
readme = "README.md"
rust-version.workspace = true

[features]
sqlite = ["dep:rusqlite"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
halter-protocol = { path = "../halter-protocol", version = "0.1.0"  }
rusqlite = { workspace = true, optional = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
