[package]
name = "halter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
halter-config = { path = "../halter-config" }
halter-protocol = { path = "../halter-protocol" }
halter-providers = { path = "../halter-providers" }
halter-runtime = { path = "../halter-runtime" }
halter-session = { path = "../halter-session" }
halter-tools = { path = "../halter-tools" }
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
