[package]
name = "halter"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
advanced-tools = ["halter-runtime/advanced-tools", "halter-tools/advanced-tools"]
ast-tools = ["halter-runtime/ast-tools", "halter-tools/ast-tools"]
image-tools = ["halter-runtime/image-tools", "halter-tools/image-tools"]
pty = ["halter-runtime/pty", "halter-tools/pty"]
profiling = ["halter-runtime/profiling", "halter-tools/profiling"]
full = ["advanced-tools", "ast-tools", "image-tools", "pty", "profiling"]
sqlite = ["halter-session/sqlite"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
halter-config = { path = "../halter-config" }
halter-protocol = { path = "../halter-protocol" }
halter-providers = { path = "../halter-providers" }
halter-runtime = { path = "../halter-runtime" }
halter-session = { path = "../halter-session" }
halter-tools = { path = "../halter-tools" }
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
