[package]
name = "halter"
edition = "2024"
license-file = "../../LICENSE"
version = "0.1.0"
authors = ["pbdeuchler"]
description = "Programmatic agent runtime, protocol, and tool harness"
repository = "https://github.com/pbdeuchler/halter"
homepage = "https://github.com/pbdeuchler/halter"
readme = "../../README.md"
keywords = ["ai", "agent", "llm", "harness", "tools"]
categories = ["development-tools"]
rust-version = "1.95"

[features]
advanced-tools = ["halter-runtime/advanced-tools", "halter-tools/advanced-tools"]
ast-tools = ["halter-runtime/ast-tools", "halter-tools/ast-tools"]
browser-tools = ["halter-runtime/browser-tools", "halter-tools/browser-tools"]
image-tools = ["halter-runtime/image-tools", "halter-tools/image-tools"]
pty = ["halter-runtime/pty", "halter-tools/pty"]
profiling = ["halter-runtime/profiling", "halter-tools/profiling"]
full = ["advanced-tools", "ast-tools", "browser-tools", "image-tools", "pty", "profiling"]
sqlite = ["halter-config/sqlite", "halter-session/sqlite"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
halter-config = { path = "../halter-config", version = "0.1.0" }
halter-hooks = { path = "../halter-hooks", version = "0.1.0"  }
halter-protocol = { path = "../halter-protocol", version = "0.1.0"  }
halter-providers = { path = "../halter-providers", version = "0.1.0"  }
halter-runtime = { path = "../halter-runtime", version = "0.1.0"  }
halter-session = { path = "../halter-session", version = "0.1.0"  }
halter-tools = { path = "../halter-tools", version = "0.1.0"  }
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
